329: Blockspan list screen has design issue on mobile. (#336)
* 329: added min content width to the span block

* 329: added side padding to span container

---------

--- a/frontend/src/app/oe/components/blockspan/blockspan.component.scss
+++ b/frontend/src/app/oe/components/blockspan/blockspan.component.scss
@@ -33,7 +33,9 @@
     color: black;
     font-weight: bold;
     position: absolute;
-    width: 50%;
+    min-width: 50%;
+    width: min-content;
+    padding: 0 8px;
     height: 9%;
     background-color: orange;
     top: 45%;
